--- a/CloudLion/src/main/resources/application.properties
+++ b/CloudLion/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -5,15 +6,15 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "cecs323o28"
-spring.datasource.url = jdbc:mysql://cecs-db01.coe.csulb.edu:3306/cecs323o28
+#spring.datasource.url = jdbc:mysql://cecs-db01.coe.csulb.edu:3306/cecs323o28
 
 # Username and password
-spring.datasource.username = cecs323o28
-spring.datasource.password = haisHo
+#spring.datasource.username = cecs323o28
+#spring.datasource.password = haisHo
 
 # Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
@@ -23,15 +24,15 @@ spring.datasource.validationQuery = SELECT 1
 # stripped before adding them to the entity manager).
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
